# sparse_ecs

./: Cargo.toml  README.md
examples/: example_1.rs  example_component.rs  example_query.rs  example_tags.rs
sparse_ecs_macros/: Cargo.toml
sparse_ecs_macros/src/: lib.rs
src/: component.rs  lib.rs  resource.rs  tags.rs  world.rs
