[package]
name = "sparse_ecs"
version = "0.5.4"
edition = "2024"

[dependencies]
parking_lot = { version = "0.12.4", default-features = false }
serde = { version = "*", optional = true }
sparse-ecs-macros = { path = "./sparse_ecs_macros" }

[features]
default = ["macros"]
macros = []
serde = ["dep:serde", "serde/derive"]